Added Image Functionality

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=3000
 API_KEY=AIzaSyA2alD8pmzJrvKCYYu6NaI-hF_o5dPX1O0
+SEARCH_API_KEY=AIzaSyA2alD8pmzJrvKCYYu6NaI-hF_o5dPX1O0
+AWS_BUCKET_REGION=us-east-1
+AWS_BUCKET_REGION=ojetest
+AWS_ACCESS_KEY_ID=AKIAROAV3QV5IKUPKJB5
+AWS_SECRET_KEY=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
+SEARCH_NGN=7b1e234da0b3cc8cd
