--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@googlemaps/react-wrapper": "^1.1.16",
     "@iconify/icons-mdi": "^1.1.42",
     "@iconify/react": "^3.1.0",
+    "aws-sdk": "^2.1046.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "google-map-react": "^2.1.10",
     "mongoose": "^6.1.1",
+    "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.65.0",
