--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,7 +8,7 @@ name: Deploy to Firebase Hosting on merge
       - main
 jobs:
   build_and_deploy:
-    runs-on: self-hosteddd
+    # runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build && npm run start-serv
