--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start-serv": "nodemon ./server/server.js",
+    "start": "node ./server/server.js",
     "build": "webpack --mode development"
   },
   "engines": {
